move Cloudflare analytics to page footers

--- a/src/index.html
+++ b/src/index.html
@@ -90,9 +90,8 @@
 <!-- End SF Tag -->
     </section>
     <section>
-        {% include "./_includes/partials/footer.html" %}
+        {% include "./_includes/partials/footer.njk" %}
     </section>
 </main>
-<!-- Cloudflare Web Analytics --><script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "3908cfe42eaf4232941ec0396c7f4452"}'></script><!-- End Cloudflare Web Analytics -->
 </body>
 </html>
