Restore top level nav to front page

--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,17 @@
 <body>
 <main>
     <header>
-    <div style="display: flex;">
-        <img src="/logo.png" width="150" height="125" style="margin-right: 2em;">
-        <h1>Mops</h1>
-    </div>
+        <nav>
+          <div style="display: flex;">
+            <img src="/logo.png" width="150" height="125" style="margin-right: 2em;">
+            <h1>Mops</h1>
+          </div>
+          <ul>
+            <li><a href="/about">About</a></li>
+            <li><a href="/news">News</a></li>
+            <li><a href="https://sourceforge.net/projects/powermops/">SourceForge</a></li>
+          </ul>
+        </nav>
     </header>
     <section>
         <p>A full featured, stand-alone development
