--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <link rel="stylesheet" href="https://unpkg.com/mvp.css">
+    <link rel="stylesheet" href="/index.css">
     <title>Mops - aMops, iMops, Powermops</title>
 </head>
 <body>
