Move iMops manual PDFs into repo/site
This eliminates the need for the s.powermops.org
static fileserver site.

--- a/src/index.html
+++ b/src/index.html
@@ -51,9 +51,9 @@
             <p>The <em>current</em> version with x86 code generation.</p>
             <ul>
                 <li>Manual<ul>
-                    <li><a href="http://s.powermops.org/imops/internals.pdf">Internals</a><small>&nbsp;PDF</small></li>
-                    <li><a href="http://s.powermops.org/imops/classreference.pdf">Class Reference</a><small>&nbsp;PDF</small></li>
-                    <li><a href="http://s.powermops.org/imops/nodegraph.pdf">Node Graph</a><small>&nbsp;PDF</small></li>
+                    <li><a href="/imops/internals.pdf">Internals</a><small>&nbsp;PDF</small></li>
+                    <li><a href="/imops/classreference.pdf">Class Reference</a><small>&nbsp;PDF</small></li>
+                    <li><a href="/imops/nodegraph.pdf">Node Graph</a><small>&nbsp;PDF</small></li>
                 </ul></li>
                 <li><a href="https://sourceforge.net/projects/powermops/files/iMops/">Download</a></li>
             </ul>
